...
    <string name="example_url_placeholder">e.g. https://</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="qr_or_password_required">QR code badge or password required</string>
    <string name="password_not_set_error">Password is required before saving</string>
...
    <string name="google_play">Get it on Google Play</string>
    <string name="lessons">Lessons</string>
    <string name="apps">Apps</string>
    <string name="home">Home</string>
    <string name="app">App</string>
    <string name="assignments">Assignments</string>
    <string name="assignment">Assignment</string>
    <string name="add_assignment">Add assignment</string>
    <string name="edit_assignment">Edit assignment</string>
    <string name="classes">Classes</string>
    <string name="clazz">Class</string>
    <string name="assigned_to">Assigned to</string>
...
    <string name="duration">Duration</string>
    <string name="more_info">More Info</string>
    <string name="more_options">More Options</string>
    <string name="remove">Remove</string>
    <string name="invalid_url">Invalid app Url</string>
...
    <string name="already_have_account">I already have an account</string>
    <string name="add_my_school">Add my school</string>
    <string name="required_field">Required field</string>
    <string name="enter_one_field">If you need response, one of the field is required</string>
    <string name="login">Login</string>
    <string name="userId_placeholder">user@school.example.org</string>
    <string name="password_label">Password</string>

    <string name="qr_badge_options">QR Badge Options</string>
    <string name="assign_new_badge_replace">Assign new badge (replace)</string>
    <string name="revoke_badge">Revoke badge</string>

    <string name="quick_easy_sign_in">Quick and easy sign-in for students</string>
    <string name="qr_code_badge_description">QR code badges enable students to quickly and safely sign-in, even on shared devices, without needing to use usernames and passwords</string>
    <string name="assign_qr_code_badge">Assign QR code badge</string>
    <string name="change_qr_code_badge">Change QR code badge</string>
    <string name="or">OR</string>
    <string name="set_password">Set password</string>
    <string name="require_password">Require Password</string>
    <string name="password_too_short">Password must be at least %d characters</string>
...
    <string name="your_dob_label">Your date of birth</string>
    <string name="your_note">Please enter your details accurately.</string>
    <string name="date_of_birth_in_future">Date of Birth cannot be in the future.</string>
    <string name="invalid_email">Enter valid email address.</string>
    <string name="child_profile_title">Child profile</string>
    <string name="child_name_label">Child's name</string>
...
    <string name="child_dob_label">Child's date of birth</string>
    <string name="child_note">Please enter your child's details.</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="dob_label">DOB</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="create_account">Create account</string>
    <string name="username_label">Username</string>
    <string name="qr_code_badge">QR Code Badge</string>
    <string name="manage_account">Manage account</string>
    <string name="error_assign_qr_code">Failed to assign QR code</string>
    <string name="error_qr_already_assigned">This QR code is already assigned to another student</string>
    <string name="passkey_not_supported">Passkeys are not supported</string>
    <string name="required">Required*</string>
...
    <string name="signup_with_passkey">Sign-up with passkey</string>
    <string name="cancel">Cancel</string>
    <string name="url">Url</string>
    <string name="paste_url">Paste Url</string>
    <string name="ok">Ok</string>
...
    <string name="camera_permission">Please enable camera access in app settings to scan QR codes</string>
    <string name="other_options">Other options</string>
    <string name="scan_qr_code_badge">Scan QR code/badge</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="waiting_title">Waiting for approval</string>
...
    <string name="refresh">Refresh</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="gender">Gender</string>
...
    <string name="enter_roll_number">Enter Roll Number</string>
    <string name="shared_device_setting">Shared device setting</string>
    <string name="scan_qr_code">Scan QR code badge</string>
    <string name="teacher_admin_login">Teacher or admin login</string>
    <string name="school_directory">School Directory</string>
...
    <string name="submit_feedback">Submit feedback</string>
    <string name="error_message">Error: try again</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>

    <string name="get_started">Get Started</string>
    <string name="onboardingTitle1">Digital Library of Edtech Apps</string>
    <string name="onboardingTitle2">Works Offline and Saves Data</string>
...
    <string name="continue_using_fingerprint_or">Continue using fingerprint, biometrics, or device PIN</string>

    <string name="people">People</string>
    <string name="person">Person</string>
    <string name="back">Back</string>
...


    <string name="add_person">Add person</string>
    <string name="select_person">Select person</string>
    <string name="edit_person">Edit person</string>

    <string name="first_names">First names</string>
...
    <string name="created">Created</string>
    <string name="last_updated">Last Updated</string>
    <string name="badge">Badge</string>
    <string name="assigned">assigned</string>
    <string name="delete_this_passkey">Delete this passkey?</string>
...
    <string name="change">Change</string>

    <string name="password_must_be_at_least">Password must be at least 6 characters</string>
    <string name="saved">Saved</string>

...
    <string name="school_directories">School directories</string>

    <string name="invalid">Invalid</string>

    <string name="parent">Parent</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="system_administrator">System administrator</string>
    <string name="site_administrator">Site administrator</string>
    <string name="role">Role</string>

    <string name="date">Date</string>
...

    <string name="due_date">Due date</string>
    <string name="family_members">Family members</string>
    <string name="family_member">Family member</string>
    <string name="select_family_person">Select family person</string>
    <string name="add_new_person">Add new person</string>
    <string name="invite_person">Invite person</string>

...
    <string name="duration_seconds_short">s</string>

    <string name="invalid_username_password">Invalid username/password</string>
    <string name="network_error_check_try_again">Network error: check your connection and try again</string>

...
