...
                    trailingContent = {
                        OutlinedButton(
                            onClick = onClickChangeQrBadge
                        ) {
                            Text(
                                text = stringResource(Res.string.change),
                                modifier = Modifier.testTag("qr_change_btn"),
                            )
                        }
                    }
                )
            } else {
                // Show QR code info box for assigning a badge
...
                    text = "${stringResource(Res.string.last_updated)}: $passwordLastUpdatedStr"
                )
            },
            trailingContent = {
                OutlinedButton(
                    onClick = onClickChangePassword,
                    modifier = Modifier.testTag("password_change_btn"),
                ) {
                    Text(
                        text = stringResource(
                            if(personPasswordVal != null)
                                Res.string.change
                            else
...
